fixed new voice-text chat button visibility

--- a/scss/components/other.scss
+++ b/scss/components/other.scss
@@ -266,7 +266,7 @@ div[class^="notice"] {
     font-weight: bold;
   }
   &::after {
-    content: "v5.5.8";
+    content: "v5.5.9";
     color: rgba(255, 255, 255, 0.3);
     font-size: 14px;
     margin-left: 8px;
